alignment player data text properly, added more fields to mobile column, increase mob-table height, added more teams button on players pages

--- a/markup/_layouts/_content/players_football_content.jade
+++ b/markup/_layouts/_content/players_football_content.jade
@@ -108,15 +108,214 @@ section.nl-section.nl-players
 																span Gameday:
 														div.col-6
 																p 09/17/17 11:00 PM
+										div.card
+											div.card-header(role="tab" id="headingTwo")
+												a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo")
+													div.row
+														div.col-6
+															p Tom Brady
+															p.act ACT
+														div.col-6
+															p 28.33
+															p $12,500
+											div(id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingOne")
+												div.card-block
+													div.row.align-items-center
+														div.col-6
+															p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Tom Brady">
+														div.col-6
+															p.nl-pl-social
+																a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
+																a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
+																a(href="#") <i class="fa fa-facebook-square" aria-hidden="true"></i>
+														div.col-6
+															p
+																span LEAGUE:
+														div.col-6
+															p
+																p <img src="assets/img/flag/USA.png" alt="USA">
+														div.col-6
+															p
+																span NEWS:
+														div.col-6
+															p <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+														div.col-6
+															p
+																span TEAM:
+														div.col-6
+															p PATRIOTS
+														div.col-6
+															p
+																span POS:
+														div.col-6
+															p A
+														div.col-6
+															p
+																span OPP:
+														div.col-6
+															p Gameday
+														div.col-6
+															p
+																span Gameday:
+														div.col-6
+															p 09/17/17 11:00 PM
+										div.card
+											div.card-header(role="tab" id="headingOne")
+												a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne")
+													div.row
+														div.col-6
+															p Tom Brady
+															p.act ACT
+														div.col-6
+															p 28.33
+															p $12,500
 
+											div(id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne")
+												div.card-block
 
+													div.row.align-items-center
+														div.col-6
+															p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Tom Brady">
+														div.col-6
+															p.nl-pl-social
+																a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
+																a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
+																a(href="#") <i class="fa fa-facebook-square" aria-hidden="true"></i>
+														div.col-6
+															p
+																span LEAGUE:
+														div.col-6
+															p
+																p <img src="assets/img/flag/USA.png" alt="USA">
+														div.col-6
+															p
+																span NEWS:
+														div.col-6
+																p <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+														div.col-6
+															p
+																span TEAM:
+														div.col-6
+																p PATRIOTS
+														div.col-6
+															p
+																span POS:
+														div.col-6
+																p A
+														div.col-6
+															p
+																span OPP:
+														div.col-6
+																p Gameday
+														div.col-6
+															p
+																span Gameday:
+														div.col-6
+																p 09/17/17 11:00 PM
+										div.card
+											div.card-header(role="tab" id="headingTwo")
+												a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo")
+													div.row
+														div.col-6
+															p Tom Brady
+															p.act ACT
+														div.col-6
+															p 28.33
+															p $12,500
+											div(id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingOne")
+												div.card-block
+													div.row.align-items-center
+														div.col-6
+															p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Tom Brady">
+														div.col-6
+															p.nl-pl-social
+																a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
+																a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
+																a(href="#") <i class="fa fa-facebook-square" aria-hidden="true"></i>
+														div.col-6
+															p
+																span LEAGUE:
+														div.col-6
+															p
+																p <img src="assets/img/flag/USA.png" alt="USA">
+														div.col-6
+															p
+																span NEWS:
+														div.col-6
+															p <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+														div.col-6
+															p
+																span TEAM:
+														div.col-6
+															p PATRIOTS
+														div.col-6
+															p
+																span POS:
+														div.col-6
+															p A
+														div.col-6
+															p
+																span OPP:
+														div.col-6
+															p Gameday
+														div.col-6
+															p
+																span Gameday:
+														div.col-6
+															p 09/17/17 11:00 PM
+										div.card
+											div.card-header(role="tab" id="headingOne")
+												a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne")
+													div.row
+														div.col-6
+															p Tom Brady
+															p.act ACT
+														div.col-6
+															p 28.33
+															p $12,500
 
+											div(id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne")
+												div.card-block
 
-
-
-
-
-
+													div.row.align-items-center
+														div.col-6
+															p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Tom Brady">
+														div.col-6
+															p.nl-pl-social
+																a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
+																a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
+																a(href="#") <i class="fa fa-facebook-square" aria-hidden="true"></i>
+														div.col-6
+															p
+																span LEAGUE:
+														div.col-6
+															p
+																p <img src="assets/img/flag/USA.png" alt="USA">
+														div.col-6
+															p
+																span NEWS:
+														div.col-6
+																p <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+														div.col-6
+															p
+																span TEAM:
+														div.col-6
+																p PATRIOTS
+														div.col-6
+															p
+																span POS:
+														div.col-6
+																p A
+														div.col-6
+															p
+																span OPP:
+														div.col-6
+																p Gameday
+														div.col-6
+															p
+																span Gameday:
+														div.col-6
+																p 09/17/17 11:00 PM
 										div.card
 											div.card-header(role="tab" id="headingTwo")
 												a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo")
@@ -169,13 +368,11 @@ section.nl-section.nl-players
 														div.col-6
 															p 09/17/17 11:00 PM
 
-
-
 							div.nl-desc-table
 								table.table.table-striped
 									thead
 										tr
-											th NAME
+											th.name-players-table NAME
 											th SALARY
 											th FP
 											th STATUS
