--- a/markup/_scss/base/_base.scss
+++ b/markup/_scss/base/_base.scss
@@ -243,7 +243,7 @@ main{
 
 // Add custom overflow to mobile table
 .nl-mob-table {
-  max-height: calculateRem(410px);
+  max-height: 38rem;
   overflow: scroll;
 }
 
