--- a/markup/_scss/sections/_nl-players.scss
+++ b/markup/_scss/sections/_nl-players.scss
@@ -187,10 +187,10 @@
     color: #e48706;
 
     p{
-      margin: calculateRem(10px) calculateRem(20px);
+      margin: 0.25rem 1.25rem;
 
       &:first-child {
-        margin-top: 10px;
+        margin-top: 5px;
       }
       font-weight: 700;
     }
@@ -366,7 +366,7 @@
   .nl-players-search {
     position: absolute;
     min-width: 9.75rem;
-    max-width: 10rem;
+    max-width: 15rem;
     bottom: calculateRem(-33px);
     right: calculateRem(3px);
 
@@ -423,5 +423,13 @@
   }
 }
 
+.nl-players {
+  .nl-players-table thead th {
+    padding: 0.5rem 0.25rem;
+  }
+  .nl-desc-table thead tr th:nth-child(1) {
+    text-align: center;
+  }
+}
 
 
