fixed helmet sizes on enter contest page

--- a/markup/_layouts/_content/football_enter_contests_content.jade
+++ b/markup/_layouts/_content/football_enter_contests_content.jade
@@ -90,7 +90,7 @@ section.nl-section.nl-players.nl-enter-contests
 							.col-12
 								div.nl-team-card.table-data-field
 									h3 team NLC2
-									<img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down helmet-team">
+									<img src="assets/img/helmet.png" alt="helmet" class="helmet-team">
 
 						.row
 							.col-12
