--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -5,7 +5,13 @@
 .nl-enter-contests {
 
   .nl-my-teams .nl-team-card img {
-    height: 70px;
+    height: 80px;
+  }
+
+  @include respond-to (allmobile) {
+    .nl-my-teams .nl-team-card img {
+      height: 50px;
+    } 
   }
 
   .nl-my-teams .nl-team-list-table th:nth-child(1) {
