--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -69,7 +69,7 @@ div.nl-section.nl-create-team.homepage-field
 						.col-12.no-padding
 							div.nl-team-card.table-data-field
 								h3 team NLC2
-								<img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down helmet">
+								<img src="assets/img/helmet.png" alt="helmet" class="helmet">
 
 					.row
 						.col-12.no-padding
