--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -725,8 +725,12 @@ section.nl-section.nl-players.nl-create-team
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
-                        div.nl-player-block.nl-team-logo-position
-                            img(src="assets/img/football/team-logo.png" alt="logo")
+                        div.nl-player-block.nl-DEF-position(data-position="DEF")
+                            img(src="assets/img/helmet-3" alt="logo")
+                            div.nl-player-block--data
+                                button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+                                p PATRIOTS
+                                p.data <span>12.67</span> <span>$42000</span>
 
                 div.nl-team-list.nl-my-teams.hide
                     .nl-card-wrapper
