--- a/markup/_layouts/_content/football_enter_contests_content.jade
+++ b/markup/_layouts/_content/football_enter_contests_content.jade
@@ -81,8 +81,11 @@ section.nl-section.nl-players.nl-enter-contests
 							div.nl-player-block--data
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-team-logo-position
-							img(src="assets/img/football/team-logo.png" alt="logo")
+						div.nl-player-block.nl-DEF-position(data-position="DEF")
+							img(src="assets/img/helmet-3" alt="logo")
+							div.nl-player-block--data
+								p PATRIOTS
+								p.data <span>12.67</span> <span>$42000</span>
 
 				div.nl-team-list.nl-my-teams.hide
 					.nl-card-wrapper
