--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -183,7 +183,7 @@
       top: -9%;
       right: 34%;
     }
-    .nl-team-logo-position{
+    .nl-DEF-position{
       bottom: 8.8%;
       left: 13%;
       img{
