--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -1,4 +1,4 @@
-section.nl-section.nl-players
+section.nl-section.nl-players.soccer
     div.container.container-narrow
         div.row
             div.col-md-12
