--- a/markup/_scss/sections/_nl-players.scss
+++ b/markup/_scss/sections/_nl-players.scss
@@ -1,3 +1,8 @@
+.nl-players.soccer {
+  background: url(../img/stadion_detail.jpg) center center no-repeat fixed;
+  background-size: cover;
+}
+
 .nl-players {
   background: url(../img/stadion_full.jpg) bottom center no-repeat fixed;
   background-size: cover;
