--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -75,6 +75,16 @@
   }
 }
 
+.soccer .nl-create-team-table .nl-players-search {
+    min-width: 9.75rem;
+    max-width: 14rem; 
+
+    @media (min-width: 768px) and (max-width:1075px) {
+      min-width: 9.75rem;
+      max-width: 10rem;
+    }
+}
+
 .nl-create-team-table {
 
   .nav-tabs .nav-link {
@@ -99,6 +109,11 @@
       right: 1.5rem;
     }
 
+  }
+
+  .nl-players-search {
+    min-width: 10.75rem;
+    max-width: 13rem;
   }
 
   @media (min-width: 992px) and (max-width:1425px) {
@@ -358,7 +373,7 @@
         bottom: 8.8%;
         left: 13%;
         img{
-          max-width: inherit;
+          max-width: 75px;
         }
       }
     }
@@ -438,6 +453,10 @@
             max-width: 95px;
           }
         }
+      }
+
+      .nl-player-block.nl-DEF-position img {
+        max-width: 90px;
       }
     }
     @include respond-to(allsmall){
