--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -991,6 +991,7 @@ section.nl-section.nl-players.nl-create-team.soccer
                             .col-12
                                 div.nl-team-card.table-data-field
                                     h3 team NLC2
+                                    <img src="assets/img/img-players.png" alt="shirt">
                         .row
                             .col-12
                                 table.table.table-striped.nl-team-list-table
