--- a/markup/_layouts/_content/enter_contests_content.jade
+++ b/markup/_layouts/_content/enter_contests_content.jade
@@ -103,6 +103,7 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 							.col-12
 								div.nl-team-card.table-data-field
 									h3 team NLC2
+									<img src="assets/img/img-players.png" alt="shirt">
 						.row
 							.col-12
 								table.table.table-striped.nl-team-list-table
