added hidden draft button to even out tables, fixed typos on create team mobile view

--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -753,7 +753,8 @@ section.nl-section.nl-players.nl-create-team
                                 table.table.table-striped
                                     thead
                                         tr
-                                            th
+                                            th 
+                                                button.btn.btn-primary.btn-sm.visibility-hidden Draft
                                             th.avatar NAME
                                             th SALARY
                                             th FP
