--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -12343,6 +12343,15 @@ td:nth-child(4).homepage-list-view {
       min-width: 9.75rem;
       max-width: 10rem; } }
 
+.nl-create-team-table .table thead th:first-child {
+  padding-left: 0.25rem; }
+
+.nl-players-table.nl-create-team-table td:first-child {
+  padding-left: 0.25rem; }
+
+.nl-create-team-table .visibility-hidden {
+  visibility: hidden; }
+
 @media (max-width: 1357px) {
   .nl-create-team-table .nav-tabs .nav-link {
     min-width: 3.625rem; } }
@@ -12394,8 +12403,7 @@ td:nth-child(4).homepage-list-view {
 @media (min-width: 992px) {
   .nl-create-team-table .nl-desc-table tbody tr td:nth-child(1),
   .nl-create-team-table .nl-desc-table thead tr th:nth-child(1) {
-    width: 8%;
-    min-width: 65px; }
+    width: 8%; }
   .nl-create-team-table .nl-desc-table tbody tr td:nth-child(2),
   .nl-create-team-table .nl-desc-table thead tr th:nth-child(2) {
     width: 24%;
