--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -124,7 +124,19 @@
     }
 }
 
+.nl-create-team-table .table thead th:first-child {
+  padding-left: 0.25rem;
+}
+
+.nl-players-table.nl-create-team-table td:first-child {
+  padding-left: 0.25rem;
+}
+
 .nl-create-team-table {
+  
+  .visibility-hidden {
+    visibility: hidden;
+  }
 
   .nav-tabs .nav-link {
     @media (max-width:1357px) {
@@ -196,7 +208,7 @@
       //width: 10% !important;
       &:nth-child(1) {
         width: 8%;
-        min-width: 65px;
+        //min-width: 65px;
       }
       &:nth-child(2) {
         width: 24%;
