final login and registration pages

--- a/markup/_scss/sections/_register.scss
+++ b/markup/_scss/sections/_register.scss
@@ -1,4 +1,10 @@
 .registration-wrapper{
+
+  .center-div {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
   // background: url(../img/nl-slide-img.jpg) top center no-repeat;
   // background: url(../img/stadion_detail-no_filter.jpg) 0 0 no-repeat;
   background: url(../img/stadion_full.jpg) 0 0 no-repeat;
