--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -12771,6 +12771,9 @@ td:nth-child(4).homepage-list-view {
   background-size: cover;
   background-position: bottom;
   padding: 6rem 0; }
+  .login-wrapper .center-div {
+    max-width: 1200px;
+    margin: 0 auto; }
   .login-wrapper button.btn.btn-primary {
     font-weight: 600; }
   .login-wrapper .show-password {
@@ -12874,6 +12877,9 @@ td:nth-child(4).homepage-list-view {
   background-size: cover;
   background-position: bottom;
   padding: 2rem 0; }
+  .registration-wrapper .center-div {
+    max-width: 1200px;
+    margin: 0 auto; }
   .registration-wrapper .custom-select {
     background-size: contain; }
 
